[package]
name = "riot-rs-wasm"
version = "0.1.0"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
stdweb = "*"
serde = "1"
serde_json = "1"
serde_derive = "1"
redux-rs = "0.1.0"